--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         <![endif]-->
 
         <section class="wrapper">
+          <div class="header">
+            <h1>Hi, I'm Kelly McClain</h1>
+          </div>
+          <div class="into">
+            <h3>I am a responsive designer and developer who thrives on visual story-telling. When I'm not working, pursuing side projects or getting lost in a book, I can be found traveling, hiking, and searching for new stories</h2>
+
+          </div>
             <div class="div-1">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
             </div>
